[gd_scene load_steps=10 format=2]

[ext_resource path="res://SubtitleHandler.gd" type="Script" id=1]
[ext_resource path="res://essential/default_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://essential/default_font_b.tres" type="DynamicFont" id=3]
[ext_resource path="res://essential/default_font_i.tres" type="DynamicFont" id=4]
[ext_resource path="res://outline_shader.tres" type="Shader" id=5]
[ext_resource path="res://essential/default_font_bi.tres" type="DynamicFont" id=6]

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/text_color = Color( 1, 0.945098, 0.498039, 1 )
shader_param/line_color = Color( 0.129412, 0.109804, 0.0784314, 1 )
shader_param/line_thickness = 2.628

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[node name="SubManager" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 640, 360 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 900, 96 )
transparent_bg = true
usage = 0
gui_disable_input = true
gui_snap_controls_to_pixels = false

[node name="SubBox" type="CenterContainer" parent="Viewport"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -4, 0 )
mouse_filter = 2

[node name="SubText" type="RichTextLabel" parent="Viewport/SubBox"]
margin_left = 2.0
margin_top = 33.0
margin_right = 898.0
margin_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 896, 0 )
mouse_filter = 2
custom_fonts/bold_italics_font = ExtResource( 6 )
custom_fonts/italics_font = ExtResource( 4 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="SubView" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = 200.0
margin_right = 450.0
margin_bottom = 296.0
mouse_filter = 2
texture = SubResource( 3 )
expand = true
flip_v = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
